# dpyr

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: DESIGN.md  ROADMAP.md  SEMANTICS.md  TESTING.md  index.md
docs/guide/: backends.md  column-wise.md  expressions.md  get-started.md  grouped-data.md  joins.md  reading.md  reshaping.md  window-functions.md
docs/guide/reading/: arrow.md  csv.md  databases.md  excel.md  in-memory.md  index.md  json.md  parquet.md  remote.md
oracle/: run_specs.R
src/dpyr/: __init__.py  backend.py  cli.py  dtypes.py  duckdb_backend.py  errors.py  expr.py  frame.py  io.py  materialize.py  plan.py  polars_backend.py  tidyselect.py
src/dpyr/formats/: __init__.py  files.py  objects.py  registry.py
tests/: conftest.py  test_agreement.py  test_docs.py  test_dtypes.py  test_dx.py  test_engine.py  test_execution.py  test_expr.py  test_hash.py  test_materialize.py  test_oracle.py  test_plan.py  test_property.py  test_review_regressions.py  test_tidyselect.py  test_typed_cols.py  test_windows.py
tests/golden/: _meta.yaml
tests/golden/arrange/: asc_na_last.parquet  desc.parquet  multi_key.parquet
tests/golden/count/: by_species.parquet
tests/golden/distinct/: full_row.parquet
tests/golden/filter/: basic_gt.parquet  in_set.parquet  is_na.parquet  multiple_preds.parquet  na_dropped.parquet  not_is_na.parquet  str_detect.parquet
tests/golden/join/: anti.parquet  full.parquet  inner.parquet  left.parquet  right.parquet  semi.parquet
tests/golden/mutate/: arithmetic.parquet  case_when.parquet  grouped_window.parquet  if_else.parquet  int_division.parquet  math.parquet  sequential.parquet  strings.parquet
tests/golden/pivot/: longer.parquet  wider.parquet
tests/golden/rename/: basic.parquet
tests/golden/select/: negation.parquet  tidyselect.parquet
tests/golden/slice/: grouped_head.parquet  head_after_arrange.parquet  tail_after_arrange.parquet
tests/golden/summarize/: aggregates.parquet  bool_sum.parquet  grouped_basic.parquet  grouped_filter.parquet  na_rm_false.parquet  two_keys_drop_last.parquet
tests/golden/window/: coalesce_replace_na.parquet  cum_grouped.parquet  lag_lead.parquet  percent_rank.parquet  row_number_ranks.parquet  separate.parquet  slice_min_ties.parquet  unite.parquet
tests/specs/arrange/: asc_na_last.yaml  desc.yaml  multi_key.yaml
tests/specs/count/: by_species.yaml
tests/specs/distinct/: full_row.yaml  subset.yaml
tests/specs/filter/: basic_gt.yaml  bool_ops.yaml  in_set.yaml  is_na.yaml  multiple_preds.yaml  na_dropped.yaml  not_is_na.yaml  str_detect.yaml
(+36 files in other folders)
