[project]
name = "dpyr"
version = "0.0.1"
description = "dplyr for Python: tidy piped verbs over polars and duckdb, with real autocompletion. Name reservation — API under active development."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Maxime Rivest", email = "mrive052@gmail.com" }]
keywords = ["dplyr", "dataframe", "polars", "duckdb", "tidyverse", "data-analysis"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]

[project.urls]
Repository = "https://github.com/maximerivest/dataframe"

[dependency-groups]
dev = ["pytest>=8", "ruff", "mypy", "hypothesis"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dpyr"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
