[project]
name = "dpyr"
version = "1.5.0"
description = "dplyr for Python: tidy piped verbs over polars and duckdb, with real autocompletion and dplyr-verified semantics."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Maxime Rivest", email = "mrive052@gmail.com" }]
keywords = ["dplyr", "dataframe", "polars", "duckdb", "tidyverse", "data-analysis"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Typing :: Typed",
  "Topic :: Scientific/Engineering",
]
dependencies = [
    "duckdb>=1.5",
    "polars>=1.30",
    "pyarrow>=15",
]

[project.optional-dependencies]
pandas = ["pandas>=2"]

[project.urls]
Repository = "https://github.com/MaximeRivest/dpyr"

[project.scripts]
dpyr = "dpyr.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff",
    "mypy",
    "hypothesis",
    "pandas-stubs>=2.3.3.260113",
    "pyyaml>=6.0.3",
    "pandas>=2.3.3",
    "datasets>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dpyr"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
